<resources>
    <string name="app_name">My Task</string>
    <string name="posts">Posts</string>
    <string name="maps">Maps</string>
    <string name="settings_page">SETTINGS PAGE</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">LogOut</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="username">UserName :</string>
    <string name="password">PassWord :</string>
    <string name="keep_me_logged_in">Keep Me Logged In</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="sign_up_page">SIGN UP PAGE</string>
    <string name="confirm_password">Confirm PassWord :</string>
    <string name="update_email">UPDATE EMAIL</string>
    <string name="email">Email :</string>
    <string name="update">Update</string>
    <string name="cancel">cancel</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="user_created_successfully">User Created Successfully</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="mail_updated">Mail Updated Successfully..!</string>
    <string name="password_updated">PassWord Updated Successfully..!</string>
    <string name="back">Back</string>


    <!-- TODO: Remove or change this placeholder text -->


</resources>
