<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape"
    tools:context=".ui.fragments.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:text="@string/login_page"
        android:textColor="#B12027"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.7"
            android:fontFamily="@font/abr"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="#000" />

        <EditText
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_weight="1.8"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#000"
            android:fontFamily="@font/abr"
            android:background="@drawable/edit_txt_shape"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="UserName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.7"
            android:fontFamily="@font/abr"
            android:gravity="center"

            android:text="@string/password"
            android:textColor="#000" />

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_weight="2.1"
            android:background="@drawable/edit_txt_shape"
            android:ems="10"
            android:fontFamily="@font/abr"
            android:gravity="center"
            android:hint="PassWord"
            android:inputType="numberPassword"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/show_password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"

            android:background="@android:color/transparent"
            android:src="@drawable/ic_visibility_on" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="131dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/login"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_shape"
            android:text="@string/signup"
            android:textColor="#FFF" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="30dp"
        android:textSize="13sp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:text="@string/keep_me_logged_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>

